<resources>
    <string name="app_name">Gmail Access</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="user">Username</string>
    <string name="pwd">Password</string>
    <string name="title_activity_bank">Bank</string>
    <string name="title_activity_email">Email</string>
    <string name="comment">Comments</string>
    <string name="mail">Email</string>
    <string name="newbank">Add Bank </string>
  <string name="logs">Show Call Logs</string>
    <string name="banktitle">Bank Name :</string>
    <string-array name="banks">
        <item>HDFC</item>
        <item>HSBC</item>
        <item>SBI</item>
        <item>ICICI</item>
        <item>CITY</item>
    </string-array>
    <string name="title_activity_call_log">CallLog</string>
</resources>
