<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragments.LoginActivityFragment"
    tools:showIn="@layout/activity_login">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.mybooks.DetailFragment">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/to_text_input_layout"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bankUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:layout_marginTop="45dp"
                    />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_margin="5dp"

                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bankPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    android:layout_marginTop="45dp"
                    />
            </android.support.design.widget.TextInputLayout>




            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/loginPost"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                android:textSize="@dimen/text_button"
                android:background="@drawable/ripplebutton"
                android:layout_gravity="center_horizontal" />



        </LinearLayout>

    </ScrollView>




</RelativeLayout>
